# MT-OpenSTL

./: .gitignore  pyproject.toml
configs/mmnist/: CNO.py  FNO.py
configs/taxibj/: FNO.py
examples/: tutorial.ipynb
openstl/api/: __init__.py  customExp.py  exp.py
openstl/methods/: __init__.py  cno.py  fno.py
openstl/models/: __init__.py  cno_model.py  fno_model.py
openstl/modules/: __init__.py  cno_modules.py  fno_modules.py
openstl/utils/: visualization.py
requirements/: docs.txt  tests.txt
tests/: cno_testing.ipynb  fno_testing.ipynb
tools/prepare_data/: download_mmnist.sh
