[tool.poetry]
name = "mt-openstl"
version = "0.1.0"
description = ""
authors = ["spacefi1"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
dask = "^2024.10.0"
decord = "^0.6.0"
future = "^1.0.0"
einops = "^0.8.0"
fvcore = "^0.1.5.post20221221"
hickle = "^5.0.3"
lpips = "^0.1.4"
matplotlib = "^3.9.2"
netcdf4 = "^1.7.1.post2"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
packaging = "^24.1"
pandas = "^2.2.3"
scikit-image = "^0.24.0"
six = "^1.16.0"
scikit-learn = "^1.5.2"
timm = "^1.0.11"
tqdm = "^4.66.5"
xarray = "^2024.9.0"
lightning = "2.2.1"
pywavelets = "^1.7.0"
asynctest = "^0.13.0"
codecov = "^2.1.13"
flake8 = "^7.1.1"
isort = "^5.13.2"
notebook = "^7.2.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-runner = "^6.0.1"
xdoctest = "^1.2.0"
yapf = "^0.40.2"
kwarray = "^0.7.1"
icecream = "^2.1.3"
neuraloperator = "^0.3.0"
wandb = "^0.18.5"
tensorly = "^0.8.1"
torchmetrics = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
